// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> accepts className prop 1`] = `
<span
  className="gh-heading gh-heading--l gh-margin-top"
>
  Welcome
</span>
`;

exports[`<Heading /> accepts modifier prop 1`] = `
<span
  className="gh-heading gh-heading--inline gh-heading--l"
>
  Welcome
</span>
`;

exports[`<Heading /> accepts size prop 1`] = `
<span
  className="gh-heading gh-heading--l"
>
  Welcome
</span>
`;

exports[`<Heading /> accepts status prop 1`] = `
<span
  className="gh-heading gh-heading--l gh-heading--success"
>
  Welcome
</span>
`;

exports[`<Heading /> renders child elements 1`] = `
<span
  className="gh-heading gh-heading--l"
>
  Welcome 
  <i />
</span>
`;

exports[`<Heading /> renders correctly 1`] = `
<span
  className="gh-heading gh-heading--l"
>
  Welcome
</span>
`;

exports[`<Heading /> renders section heading 1`] = `
<span
  className="gh-heading gh-heading--l gh-heading--section"
>
  Welcome
  <span
    className="divider"
  />
</span>
`;
